objects/LBI__Holdout__c.object
<CustomObject>
    <fields>
        <fullName>LBI__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Holdouts</relationshipLabel>
        <relationshipName>Holdouts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LBI__HoldoutGroupAccount__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Holdout Group Account Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>LBI__HoldoutGroup__c</fullName>
        <label>Holdout Group</label>
        <referenceTo>LBI__HoldoutGroup__c</referenceTo>
        <relationshipLabel>Holdouts</relationshipLabel>
        <relationshipName>Holdouts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>LBI__LEAccount__c</fullName>
        <externalId>true</externalId>
        <label>LE Account Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Holdout</label>
    <nameField>
        <displayFormat>HO-{0000}</displayFormat>
        <label>Holdout Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Holdouts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>LBI__Enforce_At_Least_One_Relationship</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
ISBLANK(LBI__Account__c)
,
ISBLANK(LBI__LEAccount__c)
)</errorConditionFormula>
        <errorMessage>At least one Account or LE Account Id required.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>LBI__Enforce_Single_Relationship</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
NOT(ISBLANK(LBI__Account__c))
,
NOT(ISBLANK(LBI__LEAccount__c))
)</errorConditionFormula>
        <errorMessage>Cannot contain both Account and LE Account Id.</errorMessage>
    </validationRules>
</CustomObject>